
  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - Fix a memory leak in the resolver.  Closes: #818178.
  * debian/patches/localedata/fr_CA-first_weekday.diff: drop.  Closes:
    #769051.
  * debian/rules, debian/rules.d/build.mk: move the C.UTF-8 locale and
    locales-all generation to a separate target instead of building them
    in the build_libc target.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff,tg-sendmsg-SCM_CREDS.diff:
    Update.
  * patches/hurd-i386/cvs-errnos.d.diff: New patch to fix build dependency
    loop.
  * patches/hurd-i386/cvs-mach-syscalls.mk.diff: New patch to fix missing
    dependency.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Mar 2016 15:03:58 +0100

glibc (2.22-3) unstable; urgency=medium

  * Update from upstream stable branch:
    - Fix linking shared objects that use libmvec.so functions.  Closes:
      #817879.
  * debian/sysdeps/sh4.mk: build with -fno-delete-null-pointer-checks to
    workaround a missing SH4 specific __builtin_trap implementation in GCC.
  * debian/patches/localedata/locale-C.diff: fix LC_TIME week and d_t_fmt
    fields in C.UTF-8 locale.  Closes: #817895.
  * debian/sysdeps/powerpcspe.mk: pass --without-fp to the configure script
    on powerpcspe.  Closes: #817926.
  * debian/rules.d/control.mk: add nios2 architecture.  Closes: #817944.
  * debian/patches/any/submitted-dlopen-noload.diff: new patch to fix a crash
    in dlopen() with RTLD_NOLOAD.  Closes: #817900.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Mar 2016 22:40:15 +0100

glibc (2.22-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - Fix pow() precision on CPUs with fma4, and the corresponding testsuite
      failures.
    - debian/patches/s390/submitted-socketcall.diff: drop, merged upstream.
  * debian/libc6{,-mips32,-mipsn32}.symbols.mips64el: add symbols for files for
    mips64el.