@@ -8,6 +8,10 @@ glibc (2.22-4) UNRELEASED; urgency=medium
   * debian/rules, debian/rules.d/build.mk: move the C.UTF-8 locale and
     locales-all generation to a separate target instead of building them
     in the build_libc target.
+  * debian/control.in/main, debian/rules, debian/rules.d/build.mk: make sure
+    to use the just built localedef when building locales. When
+    cross-compiling use the system localedef with the correct endianness and
+    build-depends on the correct version.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff,tg-sendmsg-SCM_CREDS.diff:
